--- a/src/styles/components/topBlock.module.scss
+++ b/src/styles/components/topBlock.module.scss
@@ -33,6 +33,7 @@
     }
 
     .bgImage {
+      z-index: 0;
       position: absolute;
       top: 60px;
       right: 0;
